--- a/src/com/eqsys/view/ClientDetailLayout.fxml
+++ b/src/com/eqsys/view/ClientDetailLayout.fxml
@@ -203,18 +203,19 @@
               <rowConstraints>
                   <RowConstraints maxHeight="70.0" minHeight="10.0" prefHeight="70.0" vgrow="SOMETIMES" />
                 <RowConstraints maxHeight="189.0" minHeight="10.0" prefHeight="189.0" vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="132.0" minHeight="5.0" prefHeight="132.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="189.0" minHeight="10.0" prefHeight="91.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="159.0" minHeight="5.0" prefHeight="159.0" vgrow="SOMETIMES" />
                 <RowConstraints maxHeight="119.0" minHeight="10.0" prefHeight="111.0" vgrow="SOMETIMES" />
                 <RowConstraints maxHeight="88.0" minHeight="10.0" prefHeight="59.0" vgrow="SOMETIMES" />
                   <RowConstraints maxHeight="88.0" minHeight="10.0" prefHeight="59.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <BarChart fx:id="triBarChart" prefHeight="263.0" prefWidth="546.0" GridPane.columnSpan="2" GridPane.rowIndex="1">
+                  <BarChart fx:id="triBarChart" GridPane.columnSpan="2" GridPane.rowIndex="1" GridPane.rowSpan="2">
                     <xAxis>
-                      <CategoryAxis fx:id="triXAxis" side="BOTTOM" />
+                      <CategoryAxis fx:id="triBarXAxis" label="天" side="BOTTOM" />
                     </xAxis>
                     <yAxis>
-                      <NumberAxis side="LEFT" />
+                      <NumberAxis label="总量" side="LEFT" />
                     </yAxis>
                   </BarChart>
                   <HBox prefHeight="33.0" prefWidth="474.0" GridPane.valignment="CENTER">
@@ -229,8 +230,8 @@
                            </HBox.margin></Button>
                      </children>
                   </HBox>
-                  <AnchorPane fx:id="lcParentPane" prefHeight="73.0" prefWidth="387.0" GridPane.columnSpan="2" GridPane.rowIndex="2" GridPane.rowSpan="2" />
-                  <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="2" GridPane.rowIndex="4">
+                  <AnchorPane fx:id="lcParentPane" prefHeight="73.0" prefWidth="387.0" GridPane.columnSpan="2" GridPane.rowIndex="3" GridPane.rowSpan="2" />
+                  <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="2" GridPane.rowIndex="5">
                      <children>
                         <HBox layoutX="400.0" layoutY="10.0" prefHeight="29.0" prefWidth="398.0">
                            <children>
@@ -241,10 +242,10 @@
                                  </HBox.margin>
                               </Button>
                               <Label text=" 共 " />
-                              <Label fx:id="totalLabel" text="Label" />
+                              <Label fx:id="totalLabel" text="0" />
                               <Label text=" 页     " />
                               <Label text="第 " />
-                              <Label fx:id="indexLabel" text="Label" />
+                              <Label fx:id="indexLabel" text="0" />
                               <Label text=" 页" />
                            </children>
                         </HBox>
