--- a/src/com/eqsys/view/ClientDetailLayout.fxml
+++ b/src/com/eqsys/view/ClientDetailLayout.fxml
@@ -3,7 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.chart.BarChart?>
 <?import javafx.scene.chart.CategoryAxis?>
-<?import javafx.scene.chart.LineChart?>
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
@@ -258,24 +257,74 @@
       <Tab text="状态信息">
          <content>
             <GridPane>
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
+               <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="400.0" minWidth="10.0" prefWidth="400.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="400.0" minWidth="10.0" prefWidth="400.0" />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints maxHeight="70.0" minHeight="10.0" prefHeight="70.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="189.0" minHeight="10.0" prefHeight="149.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="62.0" minHeight="10.0" prefHeight="62.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="178.0" minHeight="5.0" prefHeight="62.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="119.0" minHeight="10.0" prefHeight="118.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="119.0" minHeight="10.0" prefHeight="111.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="88.0" minHeight="10.0" prefHeight="59.0" vgrow="SOMETIMES" />
+               </rowConstraints>
                <children>
-                  <LineChart GridPane.rowIndex="1">
-                    <xAxis>
-                      <CategoryAxis side="BOTTOM" />
-                    </xAxis>
-                    <yAxis>
-                      <NumberAxis side="LEFT" />
-                    </yAxis>
-                  </LineChart>
+                  <BarChart fx:id="statusBarChart" prefHeight="147.0" prefWidth="800.0" GridPane.columnSpan="2" GridPane.rowIndex="1">
+                     <xAxis>
+                        <CategoryAxis fx:id="statusBarXAxis" label="天" side="BOTTOM" />
+                     </xAxis>
+                     <yAxis>
+                        <NumberAxis label="总量" side="LEFT" />
+                     </yAxis>
+                  </BarChart>
+                  <HBox prefHeight="33.0" prefWidth="474.0" GridPane.valignment="CENTER">
+                     <children>
+                        <DatePicker fx:id="statusBarDp" promptText="选择查询日期">
+                           <HBox.margin>
+                              <Insets left="20.0" top="20.0" />
+                           </HBox.margin>
+                        </DatePicker>
+                        <Button mnemonicParsing="false" onAction="#handleStatusQuery" text="查询">
+                           <HBox.margin>
+                              <Insets left="20.0" top="20.0" />
+                           </HBox.margin>
+                        </Button>
+                     </children>
+                  </HBox>
+                  <AnchorPane fx:id="statusLcParentPane1" prefHeight="73.0" prefWidth="387.0" GridPane.rowIndex="3" GridPane.rowSpan="2" />
+                  <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
+                     <children>
+                        <HBox layoutX="45.0" layoutY="29.0" prefHeight="29.0" prefWidth="398.0" AnchorPane.leftAnchor="45.0">
+                           <children>
+                              <Button mnemonicParsing="false" onAction="#handleStatusPrevPage" text="上一页" />
+                              <Button mnemonicParsing="false" onAction="#handleStatusNextPage" text="下一页">
+                                 <HBox.margin>
+                                    <Insets left="20.0" />
+                                 </HBox.margin>
+                              </Button>
+                              <Label text=" 共 " />
+                              <Label fx:id="statusTotalLabel" text="0" />
+                              <Label text=" 页     " />
+                              <Label text="第 " />
+                              <Label fx:id="statusIndexLabel" text="0" />
+                              <Label text=" 页" />
+                           </children>
+                        </HBox>
+                     </children>
+                  </AnchorPane>
+                  <AnchorPane fx:id="statusLcParentPane2" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3" GridPane.rowSpan="2" />
+                  <AnchorPane fx:id="statusLcParentPane3" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="5" GridPane.rowSpan="2" />
+                  <AnchorPane prefHeight="52.0" prefWidth="800.0" GridPane.columnSpan="2" GridPane.rowIndex="2">
+                     <children>
+                        <Label fx:id="pvTitleLabel" layoutX="385.0" layoutY="17.0" text="无" textFill="#048be4">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </AnchorPane>
                </children>
             </GridPane>
          </content>
