--- a/src/com/eqsys/view/ClientDetailLayout.fxml
+++ b/src/com/eqsys/view/ClientDetailLayout.fxml
@@ -91,6 +91,23 @@
                         <AnchorPane prefHeight="200.0" prefWidth="200.0" styleClass="bar_background" GridPane.columnIndex="1" GridPane.columnSpan="8" GridPane.rowSpan="2" />
                         <AnchorPane prefHeight="200.0" prefWidth="200.0" styleClass="bar_background" GridPane.columnIndex="1" GridPane.columnSpan="8" GridPane.rowIndex="6" GridPane.rowSpan="2" />
                         <AnchorPane prefHeight="200.0" prefWidth="200.0" styleClass="bar_background" GridPane.columnIndex="1" GridPane.columnSpan="8" GridPane.rowIndex="8" GridPane.rowSpan="2" />
+                        <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.columnSpan="8" GridPane.rowIndex="10" GridPane.rowSpan="2">
+                           <children>
+                              <HBox fx:id="dataReqPane1" layoutX="8.0" layoutY="14.0" prefHeight="27.0" prefWidth="502.0">
+                                 <children>
+                                    <Label text="开始时间:" />
+                                    <DatePicker fx:id="dataReqDp1" />
+                                 </children>
+                              </HBox>
+                              <HBox fx:id="dataReqPane2" layoutX="5.0" layoutY="56.0" prefHeight="23.0" prefWidth="508.0">
+                                 <children>
+                                    <Label text="结束时间:" />
+                                    <DatePicker fx:id="dataReqDp2" />
+                                 </children>
+                              </HBox>
+                              <Button layoutX="551.0" layoutY="41.0" mnemonicParsing="false" onAction="#handleDataReq" text="确定" />
+                           </children>
+                        </AnchorPane>
                      </children>
                      <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
