--- a/src/com/eqsys/view/ClientDetailLayout.fxml
+++ b/src/com/eqsys/view/ClientDetailLayout.fxml
@@ -12,6 +12,8 @@
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -55,7 +57,10 @@
                         </AnchorPane>
                         <AnchorPane id="main_background1" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="4" GridPane.rowSpan="2">
                            <children>
-                              <Label layoutX="7.0" layoutY="33.0" styleClass="label-header" text="模式控制" />
+                              <Label layoutX="7.0" layoutY="33.0" styleClass="label-header" text="模式控制">
+                                 <tooltip>
+                                    <Tooltip text="控制台站传输模式" />
+                                 </tooltip></Label>
                            </children>
                         </AnchorPane>
                         <AnchorPane prefHeight="200.0" prefWidth="200.0" styleClass="bar_background" GridPane.columnIndex="1" GridPane.columnSpan="8" GridPane.rowIndex="4" GridPane.rowSpan="2">
@@ -63,7 +68,7 @@
                               <RadioButton fx:id="consRb" layoutX="122.0" layoutY="66.0" mnemonicParsing="false" text="连续波形传输" />
                               <RadioButton fx:id="triWRb" layoutX="122.0" layoutY="42.0" mnemonicParsing="false" text="触发传波形" />
                               <RadioButton fx:id="triWNRb" layoutX="122.0" layoutY="16.0" mnemonicParsing="false" text="触发不传波形" />
-                              <Button layoutX="320.0" layoutY="44.0" mnemonicParsing="false" onAction="#handleTranMode" text="确定" />
+                              <Button layoutX="546.0" layoutY="35.0" mnemonicParsing="false" onAction="#handleTranMode" text="确定" />
                            </children>
                         </AnchorPane>
                         <AnchorPane prefHeight="200.0" prefWidth="200.0" styleClass="title" GridPane.columnSpan="9" GridPane.rowIndex="3">
@@ -74,23 +79,51 @@
                         </AnchorPane>
                         <AnchorPane prefHeight="200.0" prefWidth="200.0" styleClass="title_background" GridPane.rowIndex="6" GridPane.rowSpan="2">
                            <children>
-                              <Label layoutX="8.0" layoutY="35.0" styleClass="label-header" text="阈值设定" />
+                              <Label layoutX="8.0" layoutY="35.0" styleClass="label-header" text="阈值设定">
+                                 <tooltip>
+                                    <Tooltip text="设定设定下一次STA/LTA触发的阈值" />
+                                 </tooltip></Label>
                            </children>
                         </AnchorPane>
                         <AnchorPane prefHeight="200.0" prefWidth="200.0" styleClass="title_background" GridPane.rowIndex="10" GridPane.rowSpan="2">
                            <children>
-                              <Label layoutX="5.0" layoutY="34.0" styleClass="label-header" text="申请数据" />
+                              <Label layoutX="5.0" layoutY="34.0" styleClass="label-header" text="申请数据">
+                                 <tooltip>
+                                    <Tooltip text="申请时间段波形数据" />
+                                 </tooltip></Label>
                            </children>
                         </AnchorPane>
                         <AnchorPane id="main_background1" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="8" GridPane.rowSpan="2">
                            <children>
-                              <Label layoutX="7.0" layoutY="34.0" styleClass="label-header" text="触发控制" />
+                              <Label layoutX="7.0" layoutY="34.0" styleClass="label-header" text="触发控制">
+                                 <tooltip>
+                                    <Tooltip text="设置台站触发时段" />
+                                 </tooltip></Label>
                            </children>
                         </AnchorPane>
                         <AnchorPane prefHeight="200.0" prefWidth="200.0" />
                         <AnchorPane prefHeight="200.0" prefWidth="200.0" styleClass="bar_background" GridPane.columnIndex="1" GridPane.columnSpan="8" GridPane.rowSpan="2" />
-                        <AnchorPane prefHeight="200.0" prefWidth="200.0" styleClass="bar_background" GridPane.columnIndex="1" GridPane.columnSpan="8" GridPane.rowIndex="6" GridPane.rowSpan="2" />
-                        <AnchorPane prefHeight="200.0" prefWidth="200.0" styleClass="bar_background" GridPane.columnIndex="1" GridPane.columnSpan="8" GridPane.rowIndex="8" GridPane.rowSpan="2" />
+                        <AnchorPane prefHeight="200.0" prefWidth="200.0" styleClass="bar_background" GridPane.columnIndex="1" GridPane.columnSpan="8" GridPane.rowIndex="6" GridPane.rowSpan="2">
+                           <children>
+                              <TextField fx:id="newThresholdTf" layoutX="107.0" layoutY="35.0" />
+                              <Button layoutX="549.0" layoutY="35.0" mnemonicParsing="false" onAction="#handleSetThreshold" text="确定" />
+                           </children></AnchorPane>
+                        <AnchorPane prefHeight="200.0" prefWidth="200.0" styleClass="bar_background" GridPane.columnIndex="1" GridPane.columnSpan="8" GridPane.rowIndex="8" GridPane.rowSpan="2">
+                           <children>
+                              <HBox fx:id="triSetPane1" layoutX="17.0" layoutY="14.0" prefHeight="27.0" prefWidth="502.0">
+                                 <children>
+                                    <Label text="开始时间:" />
+                                    <DatePicker fx:id="triSetDp1" />
+                                 </children>
+                              </HBox>
+                              <HBox fx:id="triSetPane2" layoutX="14.0" layoutY="56.0" prefHeight="23.0" prefWidth="508.0">
+                                 <children>
+                                    <Label text="结束时间:" />
+                                    <DatePicker fx:id="triSetDp2" />
+                                 </children>
+                              </HBox>
+                              <Button layoutX="543.0" layoutY="35.0" mnemonicParsing="false" onAction="#handleTriggerSet" text="确定" />
+                           </children></AnchorPane>
                         <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.columnSpan="8" GridPane.rowIndex="10" GridPane.rowSpan="2">
                            <children>
                               <HBox fx:id="dataReqPane1" layoutX="8.0" layoutY="14.0" prefHeight="27.0" prefWidth="502.0">
@@ -105,7 +138,7 @@
                                     <DatePicker fx:id="dataReqDp2" />
                                  </children>
                               </HBox>
-                              <Button layoutX="551.0" layoutY="41.0" mnemonicParsing="false" onAction="#handleDataReq" text="确定" />
+                              <Button layoutX="554.0" layoutY="36.0" mnemonicParsing="false" onAction="#handleDataReq" text="确定" />
                            </children>
                         </AnchorPane>
                      </children>
