--- a/src/com/eqsys/view/DatabaseSettingLayout.fxml
+++ b/src/com/eqsys/view/DatabaseSettingLayout.fxml
@@ -1,24 +1,61 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 
-
-<AnchorPane prefHeight="300.0" prefWidth="400.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="com.eqsys.view.DatabaseSettingController">
+<AnchorPane id="edit_background" prefHeight="300.0" prefWidth="400.0" stylesheets="@mainpanetheme.css" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.eqsys.view.DatabaseSettingController">
    <children>
-      <Label layoutX="59.0" layoutY="48.0" text="数据库服务器：" />
-      <Label layoutX="107.0" layoutY="87.0" text="端口：" />
-      <Label layoutX="96.0" layoutY="124.0" text="数据库：" />
-      <TextField fx:id="serverName" layoutX="144.0" layoutY="44.0" />
-      <TextField fx:id="port" layoutX="144.0" layoutY="83.0" />
-      <TextField fx:id="dbName" layoutX="144.0" layoutY="120.0" />
-      <Button layoutX="123.0" layoutY="246.0" mnemonicParsing="false" onAction="#handleOk" text="确定" />
-      <Button layoutX="231.0" layoutY="246.0" mnemonicParsing="false" onAction="#handleCancel" text="取消" />
-      <Label layoutX="96.0" layoutY="157.0" text="用户名：" />
-      <Label layoutX="107.0" layoutY="182.0" text="密码：" />
-      <TextField fx:id="user" layoutX="144.0" layoutY="153.0" />
-      <PasswordField fx:id="password" layoutX="144.0" layoutY="186.0" />
+      <GridPane layoutY="3.0" prefHeight="300.0" prefWidth="400.0" AnchorPane.bottomAnchor="-3.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="3.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="193.0" minWidth="10.0" prefWidth="193.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="128.0" minWidth="10.0" prefWidth="73.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Label text="数据库服务器：" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
+            <Label text="端口：" GridPane.halignment="RIGHT" GridPane.rowIndex="2" />
+            <Label text="数据库：" GridPane.halignment="RIGHT" GridPane.rowIndex="3" />
+            <Label text="用户名：" GridPane.halignment="RIGHT" GridPane.rowIndex="4" />
+            <Label text="密码：" GridPane.halignment="RIGHT" GridPane.rowIndex="5" />
+            <TextField fx:id="serverName" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="port" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="dbName" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <TextField fx:id="user" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <PasswordField fx:id="password" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <HBox prefHeight="24.0" prefWidth="193.0" GridPane.columnIndex="1" GridPane.rowIndex="7">
+               <children>
+                  <Button mnemonicParsing="false" onAction="#handleOk" text="确定">
+                     <HBox.margin>
+                        <Insets left="20.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Button mnemonicParsing="false" onAction="#handleCancel" text="取消">
+                     <HBox.margin>
+                        <Insets left="30.0" />
+                     </HBox.margin>
+                  </Button>
+               </children>
+            </HBox>
+         </children>
+      </GridPane>
    </children>
 </AnchorPane>
